--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 
-SESSION_ID="INCONNU~XD~"
+SESSION_ID="INCONNU~XD~4C1VTDZB#_6-BZQ5t7hp-Wn2JIo8sb6djg63pOsX93qNsaIg-QL4"
 AUTO_READ_STATUS=true
 STATUS_READ_MSG="*Status Seen By INCONNU-XD ⚡*"
 AUTO_STATUS_REPLY=false
 AUTO_REJECT_CALLS=false
-MODE="public"
-WELCOME=false
+MODE="private"
+WELCOME=true
 AUTO_READ_MESSAGES=false
-AUTO_TYPING=false
-OWNER_NAME="INCONNU BOY"
-OWNER_NUMBER="554488138425"
+AUTO_TYPING=true
+OWNER_NAME="Hacker"
+OWNER_NUMBER="923261063548"
 AUTO_RECORDING=false
 ALWAYS_ONLINE=false
-AUTO_BLOCK=true
-AUTO_REACT=false
+AUTO_BLOCK=false
+AUTO_REACT=true
 PREFIX="."
