--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,9 @@
+
 name: Node.js CI
 
 on:
   push:
-    branches:
-
-  schedule:
-cron: '0 */6 * * *'  
-
+  pull_request:
 jobs:
   build:
 
@@ -17,24 +14,26 @@ jobs:
         node-version: [20.x]
 
     steps:
-name: Checkout repository
+    - name: Checkout repository
       uses: actions/checkout@v3
 
-name: Set up Node.js
+    - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
 
-name: Install dependencies
+    - name: Install dependencies
       run: npm install
 
-name: Install FFmpeg
+    - name: Install FFmpeg
       run: sudo apt-get install -y ffmpeg
 
-name: Start application with timeout
+    - name: Start application with timeout
       run: |
         timeout 21590s npm start  # Limite l'exécution à 5h 59m 50s
 
-name: Save state (Optional)
+    - name: Save state (Optional)
       run: |
         ./save_state.sh
+
+
