--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ OWNER_NUMBER="923261063548"
 AUTO_RECORDING=false
 ALWAYS_ONLINE=false
 AUTO_BLOCK=false
-AUTO_REACT=true
+AUTO_REACT=false
 PREFIX="."
