--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ STATUS_READ_MSG="*Status Seen By INCONNU-XD ⚡*"
 AUTO_STATUS_REPLY=false
 AUTO_REJECT_CALLS=false
 MODE="private"
-WELCOME=true
+WELCOME=false
 AUTO_READ_MESSAGES=false
 AUTO_TYPING=true
 OWNER_NAME="Hacker"
