--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-SESSION_ID="INCONNU~XD~4C1VTDZB#_6-BZQ5t7hp-Wn2JIo8sb6djg63pOsX93qNsaIg-QL4"
+SESSION_ID="INCONNU~XD~sK0hDAgL#UYEcYlE2w0izGgO2acw-7h8JvoksEJjLdQh74QOjG90"
 AUTO_READ_STATUS=true
 STATUS_READ_MSG="*Status Seen By INCONNU-XD ⚡*"
 AUTO_STATUS_REPLY=false
